src/objects/EventApi__Registration_Item__c.object
<CustomObject>
    <fields>
        <fullName>Attendee_id__c</fullName>
        <description>Holds the attendee id from the lookup Attendee.</description>
        <formula>EventApi__Attendee__r.Attendee_Id__c</formula>
        <inlineHelpText>Holds the attendee id from the lookup Attendee.</inlineHelpText>
        <label>Attendee ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guide__c</fullName>
        <formula>EventApi__Attendee__r.Guide__c</formula>
        <label>Guide ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Holds the name of the Registration Item.</description>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Item_id__c</fullName>
        <description>Holds the session id from the schedule item lookup.</description>
        <formula>EventApi__Schedule_Item__r.Session_Id__c</formula>
        <inlineHelpText>Holds the session id from the schedule item lookup.</inlineHelpText>
        <label>Schedule Item ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Registration ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
</CustomObject>